--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Пинк</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="format-detection" content="telephone=no">
-    <script type="text/javascript" src="js/picturefill.min.js" async=""></script>
+    <script type="text/javascript" src="js/picturefill.min.js" async></script>
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
